--- a/index.html
+++ b/index.html
@@ -8,24 +8,47 @@
 
     <title>Yaşar Can Şimşek</title>
 </head>
-<body>
+<body> 
+  <a name="bas"></a>
     <div class="menu">
         <div class="sari">
           <img src="foto/can.png" />
-          <h3>YAŞAR CAN ŞİMŞEK</h3>
         </div>
         <div class="aciklama"></div>
       </div>
-      <div class="menusag">
-        <div class="k1">
+      <div class="menusag">     <h2>YAŞAR CAN ŞİMŞEK</h2>
+        <div class="k1"><hr />
+     
           <h3>İŞ DENEYİMİ</h3>
-          <p>
-            HTML5,CSS3,JavaScript ile web tasarım ve geliştirme.<br />
-            Java ile Mobil uygulamada orta düzey deneyim.<br />
-            C# ile geçmiş yıllarda orta düzey deneyim.<br />
-            Python ile orta düzey deneyim.
+          <h2>Yazılım</h2><p>
+            ◈ HTML5,CSS3,JavaScript ile web tasarım ve geliştirme.<br />
+            ◈ Java ile Mobil uygulamada orta düzey deneyim.<br />
+            ◈ C# ile geçmiş yıllarda orta düzey deneyim.<br />
+            ◈ Python ile orta düzey deneyim.
           </p>
-        </div>
+          <h2>Grafik Tasarım</h2><p>
+            ◈ PhotoShop ile tasarımlar. (Afiş,Logo,Kartvizit vb.)<br>
+            ◈ After Effects ile video tasarımları.
+          </p>
+          <h2>Robotik Kodlama</h2><p>
+            ◈ Ardunio ile robotik kodlama geçmiş yıllarda orta düzey deneyim.<br>
+            ◈ Python çizgi izleyen araç ile türkiyede derece.
+          </p>
+        <hr /><h3>EĞİTİM-YARIŞMALAR</h3>
+        <h2>Okul</h2><p>
+          ◈ Akyurt Nevzat Hüseyin Tiryaki Mesleki ve Tekniki Anadolu Lisesi<br />
+        </p><h2>Geçmişte Katılmış Olduğum Yarışmalar
+        </h2><p>
+          ◈ Tübitak,Teknofest ve Meb Robot yarışması. 
+          <br />
+        </p><hr />
+        <h3>SERTİFİKALAR
+        </h3>
+          <h2>HTML5 ile Web Geliştirme
+          </h2><p>
+            ◈ BTK Akademi HTML5 ile Web Geliştirme. (HTML5,CSS3.JS)<br />
+            ◈ Sol taraftan sertifikanın karekoduna ulaşabilirsiniz.
+            <hr /> <a href="#bas" class="yukari"><img src="foto/yukarı.png"></a>
       </div>
 </body>
 </html>
